--- a/lambda/package.json
+++ b/lambda/package.json
@@ -4,13 +4,15 @@
     "description": "Alexa skill for diving into the Ocean Archive",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Matthew Berryman",
     "license": "GPL-3.0",
     "dependencies": {
-      "ask-sdk-core": "^2.11.0",
-      "ask-sdk-model": "^1.36.1",
-      "aws-sdk": "^2.991.0"
+        "ask-sdk-core": "^2.11.0",
+        "ask-sdk-model": "^1.36.1",
+        "aws-sdk": "^2.991.0",
+        "aws4": "^1.11.0",
+        "lodash": "^4.17.21"
     }
-  }
+}
