--- a/infrastructure/cfn-deployer/skill-stack.yaml
+++ b/infrastructure/cfn-deployer/skill-stack.yaml
@@ -12,6 +12,8 @@ Parameters:
     Type: String
   CodeVersion:
     Type: String
+  OAAPIARN:
+    Type: String
 Resources:
   AlexaSkillIAMRole:
       Type: AWS::IAM::Role
@@ -35,6 +37,10 @@ Resources:
                   Action:
                     - logs:*
                   Resource: arn:aws:logs:*:*:*
+                - Effect: Allow
+                  Action:
+                    - execute-api:Invoke
+                  Resource: !Ref OAAPIARN
   AlexaSkillFunction:
     Type: AWS::Lambda::Function
     Properties:
