--- a/infrastructure/cfn-deployer/skill-stack.yaml
+++ b/infrastructure/cfn-deployer/skill-stack.yaml
@@ -16,6 +16,8 @@ Parameters:
     Type: String
   WPBaseUrl:
     Type: String
+  AlexaCDNBaseURL:
+    Type: String
 Resources:
   AlexaSkillIAMRole:
       Type: AWS::IAM::Role
@@ -61,6 +63,7 @@ Resources:
         Variables: 
           OA_API_ID: !Ref OAAPIID
           WP_BASE_URL: !Ref WPBaseUrl
+          ALEXA_CDN_BASE_URL: !Ref AlexaCDNBaseURL
       MemorySize: 512
       Timeout: 60
   AlexaSkillFunctionEventPermission:
